<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown"
    tools:context=".CreateMachine">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/TextViewHello"
        android:background="@color/dark_brown"
        android:textColor="@color/black"
        android:layout_margin="8dp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/hello"
        android:textSize="24sp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radiohello"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewHello">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioTea"
            android:checked="true"
            android:onClick="OnclickRadioDrink"
            android:textColor="@color/white"
            android:text="@string/radiotea"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioCoffe"
            android:onClick="OnclickRadioDrink"
            android:textColor="@color/white"
            android:text="@string/radiocoffee"
            />
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/TextViewAddition"
        android:layout_margin="8dp"
        android:background="@color/dark_brown"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/radiohello"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/adding"
        android:textSize="24sp"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TeaSugar"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/TextViewAddition"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/sugar"
        app:layout_constraintEnd_toStartOf="@+id/TeaMilk"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/TextViewAddition"
        app:layout_constraintEnd_toStartOf="@+id/TeaLemon"
        android:text="@string/milk"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        app:layout_constraintStart_toEndOf="@+id/TeaSugar"
        android:id="@+id/TeaMilk"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/TextViewAddition"
        app:layout_constraintStart_toEndOf="@+id/TeaMilk"
        android:text="@string/lemon"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/TeaLemon"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/TextViewType"
        app:layout_constraintTop_toBottomOf="@+id/TeaMilk"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:background="@color/dark_brown"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_margin="8dp"
        android:text="@string/type"
        android:textSize="24sp"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/Type"
        android:id="@+id/Spinnertype"
        android:visibility="visible"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/TextViewType"
        app:layout_constraintStart_toStartOf="parent"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/TypeTea"
        android:id="@+id/SpinnertypeTea"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/TextViewType"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="272dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="OClickImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Spinnertype"
        app:layout_constraintVertical_bias="0.049"
        app:srcCompat="@drawable/zakaz" />


</androidx.constraintlayout.widget.ConstraintLayout>